--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ if (${CMAKE_BUILD_TYPE} STREQUAL "Release")
     set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " /Ox")
 endif()
 
+find_package(OpenSSL REQUIRED)
+
 # Client
 add_subdirectory ("client")
 add_subdirectory ("common")
