--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -11,4 +11,7 @@ file(GLOB_RECURSE CLIENT_HDRS CONFIGURE_DEPENDS *.h)
 
 ADD_EXECUTABLE(Client ${CLIENT_SRCS} ${CLIENT_HDRS})
 
+target_link_libraries(Client PRIVATE OpenSSL::SSL OpenSSL::Crypto)
+
+
 include_directories(Client ${ROOT_INCLUDE_DIRS})
