Bugfixes and crypto tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,4 @@ find_package(OpenSSL REQUIRED)
 add_subdirectory ("client")
 add_subdirectory ("common")
 add_subdirectory ("server")
+add_subdirectory ("test")
