--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@
 cmake_minimum_required (VERSION 3.8)
 
 project ("NATBuster")
+enable_testing()
 set (CMAKE_CXX_STANDARD 20)
 set(CMAKE_GENERATOR_PLATFORM=x64)
 
