Network stack test WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,6 @@ find_package(OpenSSL REQUIRED)
 # Client
 add_subdirectory ("client")
 add_subdirectory ("common")
-add_subdirectory ("server")
+add_subdirectory ("server_c2")
+add_subdirectory ("server_ip")
 add_subdirectory ("test")
