--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -11,7 +11,6 @@ file(GLOB_RECURSE CLIENT_HDRS CONFIGURE_DEPENDS *.h)
 
 ADD_EXECUTABLE(Client ${CLIENT_SRCS} ${CLIENT_HDRS})
 
-target_link_libraries(Client PRIVATE OpenSSL::SSL OpenSSL::Crypto)
-
+target_link_libraries(Client PRIVATE OpenSSL::SSL OpenSSL::Crypto Common)
 
 include_directories(Client ${ROOT_INCLUDE_DIRS})
