--- a/server_ip/CMakeLists.txt
+++ b/server_ip/CMakeLists.txt
@@ -4,11 +4,11 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
-file(GLOB_RECURSE SERVER_SRCS CONFIGURE_DEPENDS *.cpp)
-file(GLOB_RECURSE SERVER_HDRS CONFIGURE_DEPENDS *.h)
+file(GLOB_RECURSE IPSERVER_SRCS CONFIGURE_DEPENDS *.cpp)
+file(GLOB_RECURSE IPSERVER_HDRS CONFIGURE_DEPENDS *.h)
 #set(SRCS "test.cpp")
 #set(HDRS "")
 
-ADD_EXECUTABLE(ServerIP ${SERVER_SRCS} ${SERVER_HDRS})
+ADD_EXECUTABLE(ServerIP ${IPSERVER_SRCS} ${IPSERVER_HDRS})
 
 target_link_libraries(ServerIP OpenSSL::SSL OpenSSL::Crypto Common)
