--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -19,9 +19,7 @@
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
-      "ctestCommandArgs": "",
-      "inheritEnvironments": [ "msvc_x64_x64" ],
-      "variables": []
+      "ctestCommandArgs": ""
     }
   ]
 }
