--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,15 @@ set(CMAKE_GENERATOR_PLATFORM=x64)
 if (MSVC)
     add_compile_options(/arch:AVX2)
     add_compile_options(/bigobj)
-endif()
 
-if (${CMAKE_BUILD_TYPE} STREQUAL "Release")
-    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " /Ox")
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+
+    add_compile_options (/W4)
+    add_compile_options (/WX)
+
+    if (${CMAKE_BUILD_TYPE} STREQUAL "Release")
+        add_compile_options(/Ox)
+    endif()
 endif()
 
 find_package(OpenSSL REQUIRED)
