MTU calculation, better error codes

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -9,8 +9,9 @@ file(GLOB_RECURSE COMMON_HDRS CONFIGURE_DEPENDS *.h)
 #set(SRCS "test.cpp")
 #set(HDRS "")
 
-add_library(Common STATIC ${COMMON_SRCS} ${COMMON_HDRS})
+add_library(Common STATIC ${COMMON_HDRS} ${COMMON_SRCS})
 
 target_link_libraries(Common PRIVATE OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries(Common PRIVATE jsoncpp_lib jsoncpp_object JsonCpp::JsonCpp)
 
 include_directories(Common ${ROOT_INCLUDE_DIRS})
