--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ endif()
 
 find_package(OpenSSL REQUIRED)
 find_package(jsoncpp CONFIG REQUIRED)
-find_package(wxWidgets REQUIRED COMPONENTS core)
+#find_package(wxWidgets REQUIRED COMPONENTS core)
 
 # Client
 add_subdirectory ("client")
