--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -12,6 +12,8 @@ file(GLOB_RECURSE COMMON_HDRS CONFIGURE_DEPENDS *.h)
 add_library(Common STATIC ${COMMON_HDRS} ${COMMON_SRCS})
 
 target_link_libraries(Common PRIVATE OpenSSL::SSL OpenSSL::Crypto)
-target_link_libraries(Common PRIVATE jsoncpp_lib jsoncpp)
+#target_link_libraries(Common PRIVATE jsoncpp_lib jsoncpp_object JsonCpp::JsonCpp)
+#target_link_libraries(Common PRIVATE jsoncpp jsoncpp_lib)
+target_link_libraries(Common PRIVATE ${jsoncpp_LIBRARIES})
 
 include_directories(Common ${ROOT_INCLUDE_DIRS})
