Config JSON parser

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -14,6 +14,6 @@ add_library(Common STATIC ${COMMON_HDRS} ${COMMON_SRCS})
 target_link_libraries(Common PRIVATE OpenSSL::SSL OpenSSL::Crypto)
 #target_link_libraries(Common PRIVATE jsoncpp_lib jsoncpp_object JsonCpp::JsonCpp)
 #target_link_libraries(Common PRIVATE jsoncpp jsoncpp_lib)
-target_link_libraries(Common PRIVATE ${jsoncpp_LIBRARIES})
+target_link_libraries(Common PRIVATE ${jsoncpp_LIBRARIES} jsoncpp_lib)
 
 include_directories(Common ${ROOT_INCLUDE_DIRS})
