NAT property testing WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,8 @@ find_package(jsoncpp CONFIG REQUIRED)
 
 # Client
 add_subdirectory ("client")
-add_subdirectory ("client_ip_udp")
+add_subdirectory ("client_nat")
 add_subdirectory ("common")
 add_subdirectory ("server_c2")
-add_subdirectory ("server_ip")
+add_subdirectory ("server_nat")
 add_subdirectory ("test")
